--- a/package.json
+++ b/package.json
@@ -1,13 +1,8 @@
 {
   "name": "vocalis-app",
   "version": "1.0.0",
-  "main": "index.js",
   "scripts": {
-    "build": "npm install --prefix backend && npm install --prefix frontend && npm run build --prefix frontend",
-    "start": "npm run start --prefix backend"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "description": ""
+    "build": "npm install --prefix frontend && npm run build --prefix frontend && npm install --prefix backend",
+    "start": "NODE_ENV=production npm run start --prefix backend"
+  }
 }
